--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "egg-tencentcloud-sms",
-  "version": "1.0.0",
-  "description": "",
+  "version": "0.0.1-alpha",
+  "description": "egg plugin for tencent cloud sms services",
   "eggPlugin": {
     "name": "tencentcloudSms"
   },
